--- a/core-resources/src/main/res/values/strings.xml
+++ b/core-resources/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
 
     <string name="scan_text">Scan Text</string>
 
+    <string name="scan_history">Scan History</string>
+
     <string name="scanning_text">Scanning Text</string>
     <string name="scan_results">Scan Results</string>
     <string name="text_not_found">Text not found</string>
